force-app/main/default/objects/custom_create125__c/custom_create125__c.object-meta.xml
<CustomObject>
    <label>Custom created object125</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects125</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>