force-app/main/default/objects/custom_create125__c/fields/custom_create_125field542__c.field-meta.xml
<CustomField>
    <fullName>custom_create_125field542__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 125field542</label>
    <type>Checkbox</type>
</CustomField>